# sailbot23-24

./: .gitignore  .gitmodules  README.md  Untitled Diagram.drawio  setup.sh  software_architecture.drawio
sailbot_ws/src/sailbot/: CMakeLists.txt  README.md  _CMakeLists.txt  package.xml  setup.cfg  setup.py
sailbot_ws/src/sailbot/config/: config.yaml
sailbot_ws/src/sailbot/launch/: behavior_tree.py  collision_avoidance.py  full_debug.py  full_launch.py  lifecycle_test.py  network_test.py  path_test.py  path_test_lab.py  path_test_nodevices.py  path_test_vf.py  path_test_vf_fake.py  rudder_test.py  search_rescue.py  search_rescue_nodevices.py  station_keep.py  station_keep_test_nodevices.py
sailbot_ws/src/sailbot/sailbot/: README.md  action_server.py  airmar_reader.py  airmar_reader_non_lifecycle.py  ballast_control.py  buoy_detection.py  collision_avoidance_vf.py  computer_vision.py  debug_interface.py  esp32_comms.py  fake_movement.py  heading_controller.py  heading_controller_vf.py  heading_select.py  network_comms.py  path_follower.py  path_follower_vf.py  pwm_controller.py  search_rescue_vf.py  state_manager.py  station_keep_vf.py  trim_tab_comms.py  trimtab_server.py  webRTC_server.py  wind_smoother.py
sailbot_ws/src/sailbot/sailbot/behaviors/: sailbot_behavior.py
sailbot_ws/src/sailbot/sailbot/docs/: buoy_detection.rst  conf.py  heading_controller_vf.rst  network_comms.rst  path_follower_vf.rst  wind_smoother.rst
sailbot_ws/src/sailbot/sailbot/docs/_build/doctrees/: airmar_reader.doctree  ballast_control.doctree  buoy_detection.doctree  environment.pickle  esp32_comms.doctree  heading_controller_vf.doctree  index.doctree  network_comms.doctree  path_follower_vf.doctree  state_manager.doctree  wind_smoother.doctree
sailbot_ws/src/sailbot/sailbot/docs/_build/html/: .buildinfo  airmar_reader.html  ballast_control.html  buoy_detection.html  (+12 more)
sailbot_ws/src/sailbot/src/: airmar_reader.py  ballast_control.py  battery_monitor.py  control_system.py  highlvlpathing.py  network_comms.py  pwm_controller.py  serial_rc_receiver.py  trim_tab_comms.py
sailbot_ws/src/sailbot_pathfinding/: CMakeLists.txt  README.md  package.xml
sailbot_ws/src/sailbot_pathfinding/src/: astar_pathfinding_strategy.cpp  astar_pathfinding_strategy.h  linear_raycast_pathfinding_strategy.cpp  linear_raycast_pathfinding_strategy.h  map.cpp  map.h  node.h  one_tack_pathfinding_strategy.cpp  one_tack_pathfinding_strategy.h  pathfinder_node.cpp  pathfinding_strategy_base.h  prm_pathfinding_strategy.cpp  prm_pathfinding_strategy.h  raycast.cpp  raycast.h  utilities.cpp  utilities.h
(+47 files in other folders)
