<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sailbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gr-sailbot23-24@wpi.edu">WPI Sailbot MQP</maintainer>
  <license>TODO: License declaration</license>

  
  <exec_depend>sailbot_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>cv_bridge</depend>

  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>